# Nim

./: CMakeLists.txt  README.md
modules/foo/: CMakeLists.txt
modules/foo/include/: foo.h
modules/foo/src/: foo.cpp
modules/json/: CMakeLists.txt
modules/json/include/: json.hpp  jsonFile.h
modules/json/src/: json.cpp  jsonFile.cpp
modules/lines/: CMakeLists.txt
modules/lines/include/: lines.h
modules/lines/src/: lines.cpp
samples/helloItk/: CMakeLists.txt  helloItk.cpp
samples/helloVtk/: CMakeLists.txt  helloVtk.cpp
samples/lines/: CMakeLists.txt  main.cpp
samples/var/: CMakeLists.txt  main.cpp
